Atelier: Add a little GUI.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,6 +12,10 @@ global-exclude *.so
 
 # python modules
 recursive-include   src/faber *.py
+recursive-include   src/atelier *.py
+recursive-include   src/atelier *.ui
+recursive-include   src/atelier *.qrc
+recursive-include   src/atelier *.svg
 
 # VERSION file
 include             src/faber/VERSION
